# pymsg

./: .gitignore  README.md  pyproject.toml
docs/: API.md
src/pymsg/: __init__.py  auth.py  client.py  manager.py  utils.py
tests/: test_utils.py
