[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymsg"
version = "0.1.0"
description = "Async Python client for Hinatazaka46 Message API"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name="HinatazakaScraper User", email="user@example.com" },
]
dependencies = [
    "aiohttp>=3.9.0",
    "aiofiles>=23.0.0",
    "playwright>=1.40.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pymsg"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
